Adiciona endpoint Monitoring

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <h1>Unimonitor</h1>
+    <h1>UniMonitor</h1>
 </head>
 <body> 
-    <a href="/subjects.html">Subjects</a>
+    <a href="/subjects.html">Disciplinas</a><br/><br/>
+    <a href="/monitorings.html">Monitorias</a>
 </body>
