--- a/public/subjects.html
+++ b/public/subjects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <title>Disciplinas - UniMonitor</title>
     <script src="scripts/subjects.js"></script>
 </head>
 <body> 
