--- a/public/index.html
+++ b/public/index.html
@@ -5,4 +5,5 @@
 <body> 
     <a href="/subjects.html">Disciplinas</a><br/><br/>
     <a href="/monitorings.html">Monitorias</a>
+    <a href="/schedules.html">Horarios</a>
 </body>
