--- a/public/subjects.html
+++ b/public/subjects.html
@@ -13,6 +13,8 @@
 <body onload="getSubjects();">
     <div class="menu">
         <a href="/subjects.html"><h1>DISCIPLINAS</h1></a>
+        <a href="/monitorings.html"><h1>MONITORIAS</h1></a>
+        <a href="/users.html"><h1>USUÁRIOS</h1></a>
     </div>
     <div class="content">
         <div class="title">
