--- a/public/subjects.html
+++ b/public/subjects.html
@@ -7,8 +7,11 @@
 
     <script src="scripts/api.js"></script>
     <script src="scripts/utils.js"></script>
+    <script src="scripts/pages/commons.js"></script>
     <script src="scripts/pages/subjects.js"></script>
     <link rel="stylesheet" href="stylesheets/style.css">
+
+    <title>Disciplinas - UniMonitor</title>
 </head>
 <body onload="getSubjects();">
     <div class="menu">
