--- a/public/subjects.html
+++ b/public/subjects.html
@@ -13,11 +13,12 @@
 
     <title>Disciplinas - UniMonitor</title>
 </head>
-<body onload="getSubjects();">
+<body onload="getSubjects(); hideLinks();">
     <div class="menu">
-        <a href="/subjects.html"><h1>DISCIPLINAS</h1></a>
-        <a href="/monitorings.html"><h1>MONITORIAS</h1></a>
-        <a href="/users.html"><h1>USUÁRIOS</h1></a>
+        <a href="/subjects.html" id="subjects-link"><h1>DISCIPLINAS</h1></a>
+        <a href="/monitorings.html" id="monitorings-link"><h1>MONITORIAS</h1></a>
+        <a href="/users.html" id="users-link"><h1>USUÁRIOS</h1></a>
+        <a href="/schedules.html" id="schedules-link"><h1>HORÁRIOS</h1></a>
     </div>
     <div class="content">
         <div class="title">
