--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
 <head>
-    <h1>UniMonitor</h1>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
+    <script src="https://kit.fontawesome.com/4104f3f9e1.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <script src="scripts/api.js"></script>
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/pages/commons.js"></script>
+    <script src="scripts/pages/index.js"></script>
+    <link rel="stylesheet" href="stylesheets/style.css">
+
+    <title>Login - UniMonitor</title>
 </head>
-<body> 
-    <a href="/subjects.html">Disciplinas</a><br/><br/>
-    <a href="/monitorings.html">Monitorias</a>
-    <a href="/schedules.html">Horarios</a>
+<body class="login-body">
+    <div style="display: flex; flex-direction: column; justify-content: center;">
+        <div class="login-container">
+            <div class="login-header">
+                <h1>UniMonitor</h1>
+            </div>
+            <form id="form" action="JavaScript:login();" class="login-form">
+                <div class="login-row">
+                    <label for="register">Registro:</label>
+                    <input type="text" id="register" name="register"/>
+                </div>
+        
+                <div class="login-row">
+                    <label for="password">Senha:</label>
+                    <input type="password" id="password" name="password"></select>
+                </div>
+        
+                <div class="login-row">
+                    <button id="login" type="submit" class="login"><b>Login</b></button>
+                </div>
+            </form>
+        </div>
+        <div id="status" class="status"></div>
+    </div>
 </body>
