Adiciona página de agendamento

--- a/public/appointments.html
+++ b/public/appointments.html
@@ -29,7 +29,7 @@
             <label for="monitorings">Monitoria:</label>
             <select id="monitorings" name="monitorings"></select>
             <label for="date">Data:</label>
-            <input type="date" id="date" name="date"></select>
+            <input type="date" id="date" name="date" onchange="showAppointments();"></select>
             <label for="monitoring-monitor">Monitor:</label>
             <input type="text" id="monitoring-monitor" name="monitoring-monitor" disabled/>
         </div>
