--- a/public/appointments.html
+++ b/public/appointments.html
@@ -19,7 +19,7 @@
         <a href="/monitorings.html" id="monitorings-link"><h1>MONITORIAS</h1></a>
         <a href="/users.html" id="users-link"><h1>USUÁRIOS</h1></a>
         <a href="/schedules.html" id="schedules-link"><h1>HORÁRIOS</h1></a>
-        <a href="/appointments.html" id="schedules-link"><h1>AGENDAMENTOS</h1></a>
+        <a href="/appointments.html" id="appointments-link"><h1>AGENDAMENTOS</h1></a>
     </div>
     <div class="content">
         <div class="title">
