--- a/public/monitorings.html
+++ b/public/monitorings.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
+    <link rel="icon" href="images/logo.png">
+    
     <script src="https://kit.fontawesome.com/4104f3f9e1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
