Adiciona nome do usuário na tela

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                 </div>
         
                 <div class="login-row">
-                    <button id="login" type="submit" class="login"><b>Login</b></button>
+                    <button id="login" type="submit" class="login"><b>Entrar</b></button>
                 </div>
             </form>
         </div>
