feat: temp change website to support aws deploy

--- a/public/appointments.html
+++ b/public/appointments.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="icon" href="images/logo.png">
     
     <script src="https://kit.fontawesome.com/4104f3f9e1.js"></script>
@@ -17,15 +17,15 @@
 <body onload="verifyRoles(['Admin', 'Professor', 'Monitor', 'Student']); getAppointments(); hideLinks();">
     <div class="header">
         <div class="menu">
-            <a href="/subjects.html" id="subjects-link"><h1>DISCIPLINAS</h1></a>
-            <a href="/monitorings.html" id="monitorings-link"><h1>MONITORIAS</h1></a>
-            <a href="/users.html" id="users-link"><h1>USUÁRIOS</h1></a>
-            <a href="/schedules.html" id="schedules-link"><h1>HORÁRIOS</h1></a>
-            <a href="/appointments.html" id="appointments-link"><h1>AGENDAMENTOS</h1></a>
+            <a href="/prod/subjects.html" id="subjects-link"><h1>DISCIPLINAS</h1></a>
+            <a href="/prod/monitorings.html" id="monitorings-link"><h1>MONITORIAS</h1></a>
+            <a href="/prod/users.html" id="users-link"><h1>USUÁRIOS</h1></a>
+            <a href="/prod/schedules.html" id="schedules-link"><h1>HORÁRIOS</h1></a>
+            <a href="/prod/appointments.html" id="appointments-link"><h1>AGENDAMENTOS</h1></a>
         </div>
         <div class="logout">
             <span id="user-name">Olá, </span>
-            <a href="/index.html" onclick="logout();"><b>Sair</b> <i class="fas fa-sign-out-alt"></i></a>
+            <a href="/prod/index.html" onclick="logout();"><b>Sair</b> <i class="fas fa-sign-out-alt"></i></a>
         </div>
     </div>
     <div class="content">
