--- a/public/appointments.html
+++ b/public/appointments.html
@@ -12,20 +12,24 @@
     <script src="scripts/pages/appointments.js"></script>
     <link rel="stylesheet" href="stylesheets/style.css">
 
+    <script type="text/javascript">
+        document.head.innerHTML = document.head.innerHTML + "<base href='" + (window.location.origin.includes('localhost') ? window.location.origin : window.location.origin + '/prod/') + "' />";
+    </script>
+
     <title>Agendamentos - UniMonitor</title>
 </head>
 <body onload="verifyRoles(['Admin', 'Professor', 'Monitor', 'Student']); getAppointments(); hideLinks();">
     <div class="header">
         <div class="menu">
-            <a href="/prod/subjects.html" id="subjects-link"><h1>DISCIPLINAS</h1></a>
-            <a href="/prod/monitorings.html" id="monitorings-link"><h1>MONITORIAS</h1></a>
-            <a href="/prod/users.html" id="users-link"><h1>USUÁRIOS</h1></a>
-            <a href="/prod/schedules.html" id="schedules-link"><h1>HORÁRIOS</h1></a>
-            <a href="/prod/appointments.html" id="appointments-link"><h1>AGENDAMENTOS</h1></a>
+            <a href="subjects.html" id="subjects-link"><h1>DISCIPLINAS</h1></a>
+            <a href="monitorings.html" id="monitorings-link"><h1>MONITORIAS</h1></a>
+            <a href="users.html" id="users-link"><h1>USUÁRIOS</h1></a>
+            <a href="schedules.html" id="schedules-link"><h1>HORÁRIOS</h1></a>
+            <a href="appointments.html" id="appointments-link"><h1>AGENDAMENTOS</h1></a>
         </div>
         <div class="logout">
             <span id="user-name">Olá, </span>
-            <a href="/prod/index.html" onclick="logout();"><b>Sair</b> <i class="fas fa-sign-out-alt"></i></a>
+            <a href="index.html" onclick="logout();"><b>Sair</b> <i class="fas fa-sign-out-alt"></i></a>
         </div>
     </div>
     <div class="content">
